Correction for Linux platform